--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-
         </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+
     </application>
 </manifest>
