--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,37 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiplomaWork2"
         tools:targetApi="31">
-
         <activity
-            android:name=".SplashScreen"
+            android:name=".SignupActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SplashScreen"
 
+            android:exported="false">
+
+            <!--When app is switch on the first screen is SplashScreen using this code below-->
+           <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
-
     </application>
+
 </manifest>
