--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.DiplomaWork2"
         tools:targetApi="31">
         <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -27,15 +29,16 @@
         </activity>
         <activity
             android:name=".SplashScreen"
-
             android:exported="false">
 
-            <!--When app is switch on the first screen is SplashScreen using this code below-->
-           <!-- <intent-filter>
+            <!-- When app is switch on the first screen is SplashScreen using this code below -->
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".MainActivity"
