--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.diplomawork2"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiplomaWork2"
         tools:targetApi="31">
-        <activity
-            android:name=".UserProfileActivity"
-            android:exported="false" />
+
         <activity
             android:name=".SignupActivity"
             android:exported="false"></activity>
@@ -47,9 +47,24 @@
             android:name=".SettingsActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
     </application>
 
